--- a/docs/1.1-Présentation-de-la-programmation-en-Kotlin/1.1-Présentation-de-la-programmation-en-Kotlin.md
+++ b/docs/1.1-Présentation-de-la-programmation-en-Kotlin/1.1-Présentation-de-la-programmation-en-Kotlin.md
@@ -8,6 +8,22 @@ order: 1
 
 # Présentation de la programmation en Kotlin
 
+## Introduction
 
+![Introduction](./images/kotlin.jpg)
+Kotlin est un langage de programmation moderne qui aide les développeurs à être plus productifs. vous pouvez créer de meilleures applications Android en utilisant Kotlin.
 
+![facts](./images/image-2.jpg)
 
+Il existe 2,5 milliards d’appareils Android dans le monde.
+
+![facts](./images/image-3.jpg)
+
+Ainsi, à travers ce cours, nous apprendrons ce qu'est Android Studio et Kotlin.
+
+![facts](./images/image-4.jpg)
+Ce dont nous aurons besoin pour commencer ce cours est le suivant:
+- Ordinateur
+- Connexion Internet
+- Connaissances informatiques de base
+- Compétences mathématiques de base
