--- a/docs/1.1-Présentation-de-la-programmation-en-Kotlin/1.1-Présentation-de-la-programmation-en-Kotlin.md
+++ b/docs/1.1-Présentation-de-la-programmation-en-Kotlin/1.1-Présentation-de-la-programmation-en-Kotlin.md
@@ -27,3 +27,42 @@ Ce dont nous aurons besoin pour commencer ce cours est le suivant:
 - Connexion Internet
 - Connaissances informatiques de base
 - Compétences mathématiques de base
+
+## Votre premier programme à Kotlin
+
+Ce code Kotlin d'une fonction affichera un message "Hello, world!"
+
+````kotlin
+    fun main() {
+        println("Hello, world!")
+    }
+````
+Ce code Kotlin contient une erreur qui devrait être corrigée.
+
+````kotlin
+    fun main(){
+        var nom = "Reda"
+        var bonjour_nom = Bonjour(nom)
+        println(bonjour_nom)
+        println(nom)
+    }
+    
+    fun Bonjour(nom:String):String{
+        nom = "Bonjour" + nom
+        return nom
+    }
+````
+Afin d'écrire des variables dans une chaîne:
+
+````kotlin
+    fun main() {
+        val count: Int = 10
+        println("You have $count unread messages.")
+    }
+
+    fun main() {
+        val unreadCount = 5
+        val readCount = 100
+        println("You have ${unreadCount + readCount} total messages in your inbox.")
+    }
+````
