--- a/docs/1.1-Présentation-de-la-programmation-en-Kotlin/1.1-Présentation-de-la-programmation-en-Kotlin.md
+++ b/docs/1.1-Présentation-de-la-programmation-en-Kotlin/1.1-Présentation-de-la-programmation-en-Kotlin.md
@@ -52,6 +52,12 @@ Ce code Kotlin contient une erreur qui devrait être corrigée.
         return nom
     }
 ````
+
+`` l'erreur est que "maman" est déclaré en utilisant la valeur lorsqu'il est passé en paramètre dans cette fonction "fun Bonjour(nom:String)"
+la solution est de déclarer "nom" comme var
+``
+
+
 Afin d'écrire des variables dans une chaîne:
 
 ````kotlin
@@ -66,3 +72,18 @@ Afin d'écrire des variables dans une chaîne:
         println("You have ${unreadCount + readCount} total messages in your inbox.")
     }
 ````
+
+
+# Configurer Android Studio
+
+## Qu'est-ce que la JVM?
+![jvm](./images/jvm.jpg)
+La JVM (Java Virtual Machine) est une machine virtuelle qui permet d'exécuter des programmes écrits en langage Java.
+
+- Le compilateur Java traduit le code Java lisible par l'humain en bytecode.
+- La JVM charge et exécute ce bytecode, exécutant ainsi le programme Java.
+
+## Quelle est la relation entre Kotlin et JVM?
+
+Lorsque vous écrivez du code Kotlin et que vous le compilez, il est traduit en bytecode, tout comme le code Java.
+Ce bytecode peut ensuite être exécuté par n’importe quelle JVM.
