--- a/docs/1.1-Présentation-de-la-programmation-en-Kotlin/1.1-Présentation-de-la-programmation-en-Kotlin.md
+++ b/docs/1.1-Présentation-de-la-programmation-en-Kotlin/1.1-Présentation-de-la-programmation-en-Kotlin.md
@@ -57,6 +57,23 @@ Ce code Kotlin contient une erreur qui devrait être corrigée.
 la solution est de déclarer "nom" comme var
 ``
 
+Utiliser l'entrée dans kotlin
+
+```kotlin
+fun main() {
+    println("Enter the first number:")
+    val userNumber1 = readLine()!!.toDouble()
+    
+    println("Enter the second number:")
+    val userNumber2 = readLine()!!.toDouble()
+    
+    
+    val result = userNumber1 + userNumber2
+    
+    println("The result is: $result")
+}
+```
+
 
 Afin d'écrire des variables dans une chaîne:
 
